2000-03-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (Magick): 

2000-03-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (blurImage,charcoalImage,edgeImage,embossImage,
	reduceNoiseImage,sharpenImage): Modified to support order of the
	pixel neighborhood. Backward compatable function objects constructors
 	are provided for embossImage, and reduceNoiseImage.

	* lib/Image.cpp (blur,charcoal,edge,emboss,reduceNoise,sharpen):
	Now accept unsigned int argument which represents the order of the
	pixel neighborhood (e.g. 3).  This is not a backwards compatable
	change, however, backward compatable methods are provided for emboss,
	and reduceNoise.

2000-03-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Pixels.h (Pixels): Moved Image pixel methods to
 	Pixels class.

2000-02-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (annotate): Re-wrote to improve performance.
	(draw): Re-wrote to improve performance.

2000-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (text): Bugfix: support spaces in annotation text.

2000-02-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (gaussianBlurImage): New function object to
 	Gaussian blur image.

	* lib/Image.cpp (gaussianBlur): New method to Gaussian blur image.

2000-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp : Call-back based LastError class is eliminated in
 	favor of ImageMagick 5.2's re-entrant ExceptionInfo reporting.
  	This should make Magick++ thread safe under Win32.

2000-02-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (floodFillTexture): Fixed bug due to pixel pointer
 	becoming invalid in ImageMagick function.

2000-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp : Added locking to reference counting to ensure
 	thread (pthread) safety.
